add new chat app project to work page and new tech icons in about page plus minor stylings changes

--- a/about.html
+++ b/about.html
@@ -9,7 +9,12 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
 	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
+
+	<!-- DEV CSS -->
+	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	<script src="dist/js/svgAnimation.min.js"></script>
@@ -26,7 +31,7 @@
 		  <ul role="menubar" class="navigation-list">
 			<li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
 			<li><a href="about.html" role="menuitem" class="navigation-list__item navigation-list__item--active">About</a></li>
-			<li><a href="work.html" role="menuitem" class="navigation-list__item">My work</a></li>
+			<li><a href="work.html" role="menuitem" class="navigation-list__item">My Work</a></li>
 			<li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
 		  </ul>
 		  <div class="dropdown-menu">
@@ -193,7 +198,7 @@
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/postgresql.svg" alt="Postgre icon">
+      <img class="tech-icon__img" src="img/postgre-sql.svg" alt="Postgre icon">
 
       <span class="tooltip-text">Postgre</span>
     </div>
@@ -259,7 +264,17 @@
       <span class="tooltip-text">VS Code</span>
     </div>
 
-  </div> <!--tech-icone-->
+		<div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/nativescript.svg" alt="nativescript icon">
+      <span class="tooltip-text">Nativescript</span>
+    </div>
+
+    <div class="tech-icon__item">
+      <img class="tech-icon__img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
+      <span class="tooltip-text">React Native & Firebase</span>
+		</div>
+
+  </div> <!--tech-icon-->
 
 	<a href="#" class="button about-container__item centerBtn" download>Download my CV</a><br>
   </div> <!-- about-container-->
