--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
 	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
+	
+	<!-- DEV CSS -->
+	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+
 	<title>Ala Eddin Abugrara - web developer</title>
 </head>
 <body>
@@ -23,7 +28,7 @@
 		   <ul role="menubar" class="navigation-list">
 			  <li><a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a></li>
 			  <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
-			  <li><a href="work.html" role="menuitem" class="navigation-list__item">My work</a></li>
+			  <li><a href="work.html" role="menuitem" class="navigation-list__item">My Work</a></li>
 			  <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
 		   </ul>
 		   <div class="dropdown-menu">
