--- a/work.html
+++ b/work.html
@@ -9,7 +9,12 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
 	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
+
+	<!-- DEV CSS -->
+	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+
 	<title>My work</title>
 </head>
 <body>
@@ -23,7 +28,7 @@
 		   <ul role="menubar" class="navigation-list">
 			  <li><a href="index.html" role="menuitem" class="navigation-list__item">Home</a></li>
 			  <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
-			  <li><a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">My work</a></li>
+			  <li><a href="work.html" role="menuitem" class="navigation-list__item navigation-list__item--active">My Work</a></li>
 			  <li><a href="contact.html" role="menuitem" class="navigation-list__item">Contacts</a></li>
 		   </ul>
 		   <div class="dropdown-menu">
@@ -71,6 +76,18 @@
 				</p>
 				<a class="button" href="https://funkateer.github.io/meetup/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/meetup" target="_blank">Code</a>
+			</div>
+
+			<div class="project-list__item">
+				<img src="img/shatApp-poster.png" class="project-list__img" alt="picture illustrates the chat app built with Native React">
+				<h2>shatApp</h2>
+				<p>
+					An introvert React Native app, by using <a href="https://github.com/FaridSafi/react-native-gifted-chat" target="_blank">react-native-gifted-chat</a> 
+					I build a chatting app that provides users with a full functioning chat interface that send receives messages, store them locally so it's  usable 
+					offline and the possibility to share images and their location.
+				</p>
+				<!-- <a class="button" href="https://funkateer.github.io/" target="_blank">Project</a> -->
+				<a class="button" href="https://github.com/Funkateer/shatApp" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
