test and customise broken images src

--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
 	<!-- DEV CSS -->
-	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/TweenMax-latest-beta.js?v=333"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -46,8 +46,8 @@
 		</nav>
   </header>
   <div class="about-container">
-	<h1 class="about-container__item">About me</h1>
-	<h2 class="about-container__item title">How I became a web developer</h2>
+	<h1 class="about-container__header">About me</h1>
+	<h2 class="about-container__item">How I became a web developer</h2>
 	<p class="about-container__item">
 		My interest in programming started a few years back while looking at my wife coding.
 		I wanted to understand what was that weird looking screen with open terminals and lines of,
@@ -123,154 +123,154 @@
 
   <div class="tech-icon">
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/javascript.svg" alt="JavaScript icon">
+      <img class="tech-icon__img img" src="img/javascript.svg" alt="JavaScript icon">
       <span class="tooltip-text">JavaScript</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/html5.svg" alt="HTML5 icon">
+      <img class="tech-icon__img img" src="img/html5.svg" alt="HTML5 icon">
       <span class="tooltip-text">HTML5</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/css3.svg" alt="CSS icon">
+      <img class="tech-icon__img img" src="img/css3.svg" alt="CSS icon">
       <span class="tooltip-text">CSS</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/jquery.svg" alt="jQuery icon">
+      <img class="tech-icon__img img" src="img/jquery.svg" alt="jQuery icon">
       <span class="tooltip-text">jQuery</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/angular.svg" alt="Angular icon">
+      <img class="tech-icon__img img" src="img/angular.svg" alt="Angular icon">
       <span class="tooltip-text">Angular</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/react.svg" alt="React icon">
+      <img class="tech-icon__img img" src="img/react.svg" alt="React icon">
       <span class="tooltip-text">React</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/vue.svg" alt="Vue icon">
+      <img class="tech-icon__img img" src="img/vue.svg" alt="Vue icon">
       <span class="tooltip-text">Vue</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/redux.svg" alt="Redux icon">
+      <img class="tech-icon__img img" src="img/redux.svg" alt="Redux icon">
       <span class="tooltip-text">Redux</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/bootstrap4.svg" alt="Bootstrap icon">
+      <img class="tech-icon__img img" src="img/bootstrap4.svg" alt="Bootstrap icon">
       <span class="tooltip-text">Bootstrap 4</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/sass.svg" alt="SASS icon">
+      <img class="tech-icon__img img" src="img/sass.svg" alt="SASS icon">
       <span class="tooltip-text">SASS</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/es6.svg" alt="ES6 icon">
+      <img class="tech-icon__img img" src="img/es6.svg" alt="ES6 icon">
       <span class="tooltip-text">ES6</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/typescript.svg" alt="TypeScript icon">
+      <img class="tech-icon__img img" src="img/typescript.svg" alt="TypeScript icon">
       <span class="tooltip-text">TypeScript</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/nodejs.svg" alt="Node.js icon">
+      <img class="tech-icon__img img" src="img/nodejs.svg" alt="Node.js icon">
       <span class="tooltip-text">Node.js</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/mongo-db.svg" alt="Mongo DB icon">
+      <img class="tech-icon__img img" src="img/mongo-db.svg" alt="Mongo DB icon">
       <span class="tooltip-text">Mongo-DB</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/mysql.svg" alt="MySQL icon">
+      <img class="tech-icon__img img" src="img/mysql.svg" alt="MySQL icon">
       <span class="tooltip-text">mySQL</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/postgre-sql.svg" alt="Postgre icon">
+      <img class="tech-icon__img img" src="img/postgre-sql.svg" alt="Postgre icon">
 
       <span class="tooltip-text">Postgre</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/heroku.svg" alt="Heroku icon">
+      <img class="tech-icon__img img" src="img/heroku.svg" alt="Heroku icon">
       <span class="tooltip-text">Heroku</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/jest.svg" alt="Jest icon">
+      <img class="tech-icon__img img" src="img/jest.svg" alt="Jest icon">
       <span class="tooltip-text">Jest</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/puppeteer.svg" alt="Puppeteer icon">
+      <img class="tech-icon__img img" src="img/puppeteer.svg" alt="Puppeteer icon">
       <span class="tooltip-text">Puppeteer</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/cucumber.svg" alt="Cucumber icon">
+      <img class="tech-icon__img img" src="img/cucumber.svg" alt="Cucumber icon">
       <span class="tooltip-text">Cucumber</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/git.svg" alt="Git icon">
+      <img class="tech-icon__img img" src="img/git.svg" alt="Git icon">
       <span class="tooltip-text">Git</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/github.svg" alt="Github icon">
+      <img class="tech-icon__img img" src="img/github.svg" alt="Github icon">
       <span class="tooltip-text">Github</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/postman.svg" alt="Postman icon">
+      <img class="tech-icon__img img" src="img/postman.svg" alt="Postman icon">
       <span class="tooltip-text">Postman</span>
     </div>
 
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/sketch.svg" alt="Sketch icon">
+      <img class="tech-icon__img img" src="img/sketch.svg" alt="Sketch icon">
       <span class="tooltip-text">Sketch</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/adobe-xd.svg" alt="Adobe XD icon">
+      <img class="tech-icon__img img" src="img/adobe-xd.svg" alt="Adobe XD icon">
       <span class="tooltip-text"> Adobe XD</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/slack.svg" alt="Slack icon">
+      <img class="tech-icon__img img" src="img/slack.svg" alt="Slack icon">
       <span class="tooltip-text">Slack</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/trello.svg" alt="Trello icon">
+      <img class="tech-icon__img img" src="img/trello.svg" alt="Trello icon">
       <span class="tooltip-text">Trello</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/vsc.svg" alt="Visual Studio Code icon">
+      <img class="tech-icon__img img" src="img/vsc.svg" alt="Visual Studio Code icon">
       <span class="tooltip-text">VS Code</span>
     </div>
 
 		<div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/nativescript.svg" alt="nativescript icon">
+      <img class="tech-icon__img img" src="img/nativescript.svg" alt="nativescript icon">
       <span class="tooltip-text">Nativescript</span>
     </div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
+      <img class="tech-icon__img img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
       <span class="tooltip-text">React Native & Firebase</span>
 		</div>
 
