--- a/work.html
+++ b/work.html
@@ -10,16 +10,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
 	<!-- DEV CSS -->
-	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 	<title>My work</title>
 </head>
 <body>
 	<header class="page-header">
-		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
+		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
 		<a href="index.html" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
 			<span class="namelogo-caption">Web-developer </span>
@@ -43,10 +43,10 @@
 		</nav>
 	</header>
 	<div class="work-container">
-		<h1>Work</h1>
+		<h1 class="work-container__header">Work</h1>
 		<div class="project-list">
 			<div class="project-list__item">
-				<img src="img/website-portfolio-poster.png" class="project-list__img" alt="picture illustrates the website-portfolio project">
+				<img src="img/website-portfolio-posterTESTING-BROKEN-SRC-IMAGES.png" class="project-list__img img" alt="picture illustrates the website-portfolio project">
 				<h2>My Portfolio</h2>
 				<p>
 					Yes, the very one you're looking at! <br>
@@ -57,7 +57,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/Cineteca-poster.png" class="project-list__img" alt="picture illustrates the Cineteca project">
+				<img src="img/Cineteca-poster.png" class="project-list__img img" alt="picture illustrates the Cineteca project">
 				<h2>Cineteca app a RESTful API</h2>
 				<p>
 					A complete web app that allows users to create their personal profile, search and save info on movies.
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/meetup-poster.png" class="project-list__img" alt="picture illustrates the Meetup app built with React">
+				<img src="img/meetup-poster.png" class="project-list__img img" alt="picture illustrates the Meetup app built with React">
 				<h2>Meetup app </h2>
 				<p>
 					A serverless, progressive web application (PWA) built with React using a test-driven development TDD technique.
@@ -79,7 +79,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/shatApp-poster.png" class="project-list__img" alt="picture illustrates the chat app built with Native React">
+				<img src="img/shatApp-poster.png" class="project-list__img img" alt="picture illustrates the chat app built with Native React">
 				<h2>shatApp</h2>
 				<p>
 					An introvert React Native app, by using <a href="https://github.com/FaridSafi/react-native-gifted-chat" target="_blank">react-native-gifted-chat</a> 
@@ -91,7 +91,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/quiz-app-poster.png" class="project-list__img" alt="picture illustrates the quiz app built with Angular">
+				<img src="img/quiz-app-poster.png" class="project-list__img img" alt="picture illustrates the quiz app built with Angular">
 				<h2>Quiz app</h2>
 				<p>
 					Quiz app built using Angular Js and Angular <a href="https://material.angular.io/">Material</a> for the stylings
@@ -101,7 +101,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/toVue-list-poster.png" class="project-list__img" alt="picture illustrates the todo list app built with Vue">
+				<img src="img/toVue-list-poster.png" class="project-list__img img" alt="picture illustrates the todo list app built with Vue">
 				<h2>ToVue list</h2>
 				<p>
 					A todo list using the super awesome Vue framework and <a href="https://material.angular.io/">Material</a> for the stylings
@@ -112,7 +112,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/Pokemon-simple-js-app-poster.png" class="project-list__img" alt="picture illustrates the Pokemon simple-js app project">
+				<img src="img/Pokemon-simple-js-app-poster.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
 				<h2>Simple JS Pokedex-app</h2>
 				<p>
 					In this app with help of APIs I used vanilla Javascript to fetch and display details about pokemons, I also made a clone where all the Javascript logic was replaced by jQuery! <br>
@@ -124,7 +124,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/colorGame-poster.png" class="project-list__img" alt="picture illustrates the color game project">
+				<img src="img/colorGame-poster.png" class="project-list__img img" alt="picture illustrates the color game project">
 				<h2>RGB Color guessing game</h2>
 				<p>
 					I used vanilla Javascript to build a game where you guess the color of random RGB value between 3 or 9 colors whether
@@ -135,7 +135,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/circles-poster.png" class="project-list__img" alt="picture illustrates the circles game project">
+				<img src="img/circles-poster.png" class="project-list__img img" alt="picture illustrates the circles game project">
 				<h2>Circles</h2>
 				<p>
 					A simple but fun app where each key of the keyboard generate a random colored expanding dot on the screen and a sound,
@@ -146,7 +146,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/todoList-poster.png" class="project-list__img" alt="picture illustrates the todo list project">
+				<img src="img/todoList-poster.png" class="project-list__img img" alt="picture illustrates the todo list project">
 				<h2>Todo list app</h2>
 				<p>
 					Yet another todo list this time I'm using jQuery <br>
@@ -156,7 +156,7 @@
 			</div>
 
 			<!-- <div class="project-list__item">
-				<img src="img/camping-ground-poster.png" class="project-list__img" alt="picture illustrates the Camping ground "yelp" project">
+				<img src="img/camping-ground-poster.png" class="project-list__img img" alt="picture illustrates the Camping ground "yelp" project">
 				<h2>Camping ground rating app </h2>
 				<p>
 					Fully functional front and back-end app I used Node with Express and mongoose for the server side and Mongo db for database
@@ -178,9 +178,9 @@
 	</div> <!--work container-->
 	<footer>
 		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" class="img" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" class="img" alt="Twitter"></a>
+		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" class="img" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
