--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
 	<!-- DEV CSS -->
-	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
-	<title>Contacts - Let's get in touch</title>
+	<title>Let's get in touch</title>
 </head>
 <body>
 	<header class="page-header">
-		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
+		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
 		<a href="index.html" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
 			<span class="namelogo-caption">Web-developer </span>
@@ -44,7 +44,7 @@
 	</header>
 	<div class="contact-container">
 		<section class="contact-item">
-			<h1>My contacts!</h1>
+			<h1 class="contact-container__header">My contacts!</h1>
 			Ala Eddin Abugrara<br>
 			Schleißheimer Straße 131<br>
 			80797 Munich<br>
@@ -77,9 +77,9 @@
 	</div>
 	<footer>
 		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
+		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" class="img" alt="Github Logo"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" class="img" alt="Twitter Logo"></a>
+		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" class="img" alt="LinkedIn Logo"></a>
 	</footer>
 	<script src="dist/js/scripts.min.js"></script>
 </body>
