--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
-	<link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css">
-	
+	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
+
 	<!-- DEV CSS -->
-	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 	<title>Ala Eddin Abugrara - web developer</title>
 </head>
 <body>
 	<header class="page-header">
-		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo"></a>
+		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
 		<a href="index.html" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
 			<span class="namelogo-caption">Web-developer </span>
@@ -43,23 +43,23 @@
 		</nav>
 	</header>
 	<main class="profile-container">
-		<a href="about.html"><img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait"></a>
+		<a href="about.html"><img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait img"></a>
 		<div class="profile-description">
 			<h1>Hello World!</h1>
 			<p>
 				My name is Alà Eddin,
 				I was born in Tripoli Libya. <br>
-				I am a junior <span class="B-Btext"> &nbsp;&lt;web&gt;&nbsp;</span> with a background
+				I am a junior <span class="blueBackground-text"> &nbsp;&lt;web&gt;&nbsp;</span> with a background
 				in Political sciences and music, currently based in Munich
 			</p>
-			<a href="work.html">Check out some of my code</a>
+			<a href="work.html">Check out some of my work</a>
 		</div>
 	</main>
 	<footer>
 		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" class="img" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" class="img" alt="Twitter"></a>
+		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" class="img" alt="LinkedIn"></a>
 	</footer>
 </body>
 </html>
