start to implementing UI standards

--- a/work.html
+++ b/work.html
@@ -9,7 +9,6 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
 	<!-- DEV CSS -->
@@ -53,7 +52,10 @@
 					I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and
 					mobile responsiveness have a look at the code for more details
 				</p>
-				<a class="button" href="https://github.com/Funkateer/website-portfolio" target="_blank">Code</a>
+				<!-- <a class="button" href="https://github.com/Funkateer/website-portfolio" target="_blank">Code</a> -->
+
+				<!-- TEMPORARY disabled Button for UI testing  -->
+				<a class="button" href="#">Code</a>
 			</div>
 
 			<div class="project-list__item">
@@ -82,11 +84,10 @@
 				<img src="img/shatApp-poster.png" class="project-list__img img" alt="picture illustrates the chat app built with Native React">
 				<h2>shatApp</h2>
 				<p>
-					An introvert React Native app, by using <a href="https://github.com/FaridSafi/react-native-gifted-chat" target="_blank">react-native-gifted-chat</a> 
-					I build a chatting app that provides users with a full functioning chat interface that send receives messages, store them locally so it's  usable 
+					An introvert React Native app, by using <a href="https://github.com/FaridSafi/react-native-gifted-chat" target="_blank">react-native-gifted-chat</a>
+					I build a chatting app that provides users with a full functioning chat interface that send receives messages, store them locally so it's  usable
 					offline and the possibility to share images and their location.
 				</p>
-				<!-- <a class="button" href="https://funkateer.github.io/" target="_blank">Project</a> -->
 				<a class="button" href="https://github.com/Funkateer/shatApp" target="_blank">Code</a>
 			</div>
 
@@ -115,7 +116,7 @@
 				<img src="img/Pokemon-simple-js-app-poster.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
 				<h2>Simple JS Pokedex-app</h2>
 				<p>
-					In this app with help of APIs I used vanilla Javascript to fetch and display details about pokemons, I also made a clone where all the Javascript logic was replaced by jQuery! <br>
+					In this app with help of APIs I used vanilla Javascript to fetch and display details about pokemons, I also made a clone where all the Javascript logic was replaced by jQuery and Bootstrap 4! <br>
 					have a look
 				</p>
 				<a class="button" href="https://funkateer.github.io/Pokedex-simple-js-app/" target="_blank">Project</a>
@@ -154,16 +155,6 @@
 				<a class="button" href="https://funkateer.github.io/todoList/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/todoList" target="_blank">Code</a>
 			</div>
-
-			<!-- <div class="project-list__item">
-				<img src="img/camping-ground-poster.png" class="project-list__img img" alt="picture illustrates the Camping ground "yelp" project">
-				<h2>Camping ground rating app </h2>
-				<p>
-					Fully functional front and back-end app I used Node with Express and mongoose for the server side and Mongo db for database
-					among other libraries
-				</p>
-				<a href="#" target="_blank">See project code on GitHub</a>
-			</div> -->
 
 			<div class="project-list__item">
 				<h2>Your project</h2>
