--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
 	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
 	<!-- DEV CSS -->
@@ -276,7 +275,7 @@
 
   </div> <!--tech-icon-->
 
-	<a href="#" class="button about-container__item centerBtn" download>Download my CV</a><br>
+	<a href="#" class="button about-container__item " download>Download my CV</a><br>
   </div> <!-- about-container-->
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20962 10601" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd">
