--- a/about.html
+++ b/about.html
@@ -121,65 +121,76 @@
 	</div>
 
   <div class="tech-icon">
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/javascript.svg" alt="JavaScript icon">
-      <span class="tooltip-text">JavaScript</span>
-    </div>
 
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/html5.svg" alt="HTML5 icon">
       <span class="tooltip-text">HTML5</span>
-    </div>
+	</div>
 
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/css3.svg" alt="CSS icon">
       <span class="tooltip-text">CSS</span>
-    </div>
+	</div>
+
+	<div class="tech-icon__item">
+		<img class="tech-icon__img img" src="img/javascript.svg" alt="JavaScript icon">
+		<span class="tooltip-text">JavaScript</span>
+	</div>
 
     <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/jquery.svg" alt="jQuery icon">
-      <span class="tooltip-text">jQuery</span>
-    </div>
+		<img class="tech-icon__img img" src="img/es6.svg" alt="ES6 icon">
+		<span class="tooltip-text">ES6</span>
+	</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/angular.svg" alt="Angular icon">
-      <span class="tooltip-text">Angular</span>
-    </div>
-
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/react.svg" alt="React icon">
-      <span class="tooltip-text">React</span>
-    </div>
-
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/vue.svg" alt="Vue icon">
-      <span class="tooltip-text">Vue</span>
-    </div>
+	<div class="tech-icon__item">
+		<img class="tech-icon__img img" src="img/react.svg" alt="React icon">
+		<span class="tooltip-text">React</span>
+	</div>
 
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/redux.svg" alt="Redux icon">
       <span class="tooltip-text">Redux</span>
-    </div>
+	</div>
+	
+	<!-- <div class="tech-icon__item">
+		<img class="tech-icon__img img" src="img/nativescript.svg" alt="nativescript icon">
+		<span class="tooltip-text">Nativescript</span>
+	</div> -->
 
+	<div class="tech-icon__item">
+		<img class="tech-icon__img img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
+		<span class="tooltip-text">React Native & Firebase</span>
+	</div>
+
+	<div class="tech-icon__item">
+		<img class="tech-icon__img img" src="img/angular.svg" alt="Angular icon">
+		<span class="tooltip-text">Angular</span>
+	</div>
+
+	<div class="tech-icon__item">
+		<img class="tech-icon__img img" src="img/vue.svg" alt="Vue icon">
+		<span class="tooltip-text">Vue</span>
+	</div>
+
+	<div class="tech-icon__item">
+		<img class="tech-icon__img img" src="img/sass.svg" alt="SASS icon">
+		<span class="tooltip-text">SASS</span>
+	</div>
+	
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/bootstrap4.svg" alt="Bootstrap icon">
       <span class="tooltip-text">Bootstrap 4</span>
-    </div>
-
+	</div>
+	
     <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/sass.svg" alt="SASS icon">
-      <span class="tooltip-text">SASS</span>
-    </div>
+      <img class="tech-icon__img img" src="img/jquery.svg" alt="jQuery icon">
+      <span class="tooltip-text">jQuery</span>
+	</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/es6.svg" alt="ES6 icon">
-      <span class="tooltip-text">ES6</span>
-    </div>
-
-    <div class="tech-icon__item">
+    <!-- <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/typescript.svg" alt="TypeScript icon">
       <span class="tooltip-text">TypeScript</span>
-    </div>
+    </div> -->
 
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/nodejs.svg" alt="Node.js icon">
@@ -227,10 +238,10 @@
       <span class="tooltip-text">Git</span>
     </div>
 
-    <div class="tech-icon__item">
+    <!-- <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/github.svg" alt="Github icon">
       <span class="tooltip-text">Github</span>
-    </div>
+    </div> -->
 
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/postman.svg" alt="Postman icon">
@@ -238,20 +249,20 @@
     </div>
 
 
-    <div class="tech-icon__item">
+    <!-- <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/sketch.svg" alt="Sketch icon">
       <span class="tooltip-text">Sketch</span>
-    </div>
+    </div> -->
 
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/adobe-xd.svg" alt="Adobe XD icon">
       <span class="tooltip-text"> Adobe XD</span>
     </div>
 
-    <div class="tech-icon__item">
+    <!-- <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/slack.svg" alt="Slack icon">
       <span class="tooltip-text">Slack</span>
-    </div>
+    </div> -->
 
     <div class="tech-icon__item">
       <img class="tech-icon__img img" src="img/trello.svg" alt="Trello icon">
@@ -263,19 +274,10 @@
       <span class="tooltip-text">VS Code</span>
     </div>
 
-		<div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/nativescript.svg" alt="nativescript icon">
-      <span class="tooltip-text">Nativescript</span>
-    </div>
-
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
-      <span class="tooltip-text">React Native & Firebase</span>
-		</div>
-
   </div> <!--tech-icon-->
 
-	<a href="#" class="button about-container__item " download>Download my CV</a><br>
+	<a href="AlaEddin-Abugrara-CV.html" class="button about-container__item " target="_blank">View my CV</a>
+	<a href="file/AlaEddin-Abugrara-CV.pdf" class="button about-container__item " download>download Black and White</a><br>
   </div> <!-- about-container-->
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20962 10601" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd">
