--- a/contact.html
+++ b/contact.html
@@ -44,20 +44,20 @@
 	<div class="contact-container">
 		<section class="contact-item">
 			<h1 class="contact-container__header">My contacts!</h1>
-			Ala Eddin Abugrara<br>
-			Schleißheimer Straße 131<br>
-			80797 Munich<br>
-			Germany<br>
+			Ala Eddin Abugrara <br>
+			Schleißheimer Straße <br>
+			80797 Munich <br>
+			Germany <br>
 			<br>
-			Tel <a href="tel:+491234567">+49 176 36369374‬</a><br>
-			Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a><br>
+			Tel <a href="tel:+491234567">+49 176 36369374‬</a> <br>
+			Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a> <br>
 			Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>
 			<a href="mailto:alaeddin.abugrara@gmail.com" class="button">Contact me</a>
 		</section>
 		<form action="#" method="POST" id="contact-form" class="contact-item">
 			<p>Or write me a message:</p>
 		   <div>
-				<label class="standard-label" for="contact-email">Email:<span class="legend">(required)</span></label><br>
+				<label class="standard-label" for="contact-email">Email:<span class="legend">(required)</span></label> <br>
 				<input id="contact-email" type="email" required>
 		   </div>
 			<br>
