--- a/about.html
+++ b/about.html
@@ -7,7 +7,10 @@
 	<meta name="description" content="Information about Ala Eddin Abugrara">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
+
+	<!-- <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
@@ -45,239 +48,156 @@
 		</nav>
   </header>
   <div class="about-container">
-	<h1 class="about-container__header">About me</h1>
-	<h2 class="about-container__item">How I became a web developer</h2>
-	<p class="about-container__item">
-		My interest in programming started a few years back while looking at my wife coding.
-		I wanted to understand what was that weird looking screen with open terminals and lines of,
-		what was for me then, gibberish!
-	</p>
-	<p class="about-container__item">
-		I started to learn Python but then I stumbled on Javascript! I got immediately hooked,
-		the more I knew the more I wanted to know. It was like learning to play music all over again.
-	</p>
-	<p class="about-container__item">
-		I went through numerous courses on-line cementing my knowledge of HTML, CSS, Javascript and
-		the respective frameworks and libraries. I also took my first peek at back-end technologies
-		(because let’s be honest, there is where the magic start to happen) with the goal of becoming a MERN stack developer.
-	</p>
-	<p class="about-container__item">
-		Looking back to all that SASS, Bootstrap, jQuery, React, Node, Express, Mongo
-		and whatnot I feel my feet getting wet, but also standing at the edge of an ocean and I am going sailing!
-	</p>
+		<h1 class="about-container__header">ABOUT ME</h1>
+		<h2 class="about-container__item">How I became a web developer</h2>
+		<p class="about-container__item">
+			My interest in programming started a few years back while looking at my wife coding.
+			I wanted to understand what was that weird looking screen with open terminals and lines of,
+			what was for me then, gibberish!
+		</p>
+		<p class="about-container__item">
+			I started to learn Python but then I stumbled on Javascript! I got immediately hooked,
+			the more I knew the more I wanted to know. It was like learning to play music all over again.
+		</p>
+		<p class="about-container__item">
+			I went through numerous courses on-line cementing my knowledge of HTML, CSS, Javascript and
+			the respective frameworks and libraries. I also took my first peek at back-end technologies
+			(because let’s be honest, there is where the magic start to happen) with the goal of becoming a MERN stack developer.
+		</p>
+		<p class="about-container__item">
+			Looking back to all that SASS, Bootstrap, jQuery, React, Node, Express, Mongo
+			and whatnot I feel my feet getting wet, but also standing at the edge of an ocean and I am going sailing!
+		</p>
 
-  <div class="front-end-skill about-container__item">
-		<h3>Front-end</h3>
-		<table>
-			<thead>
-				<tr>
-				<th>Skills</th>
-				<th>Level</th>
-				<th>Years of Experience</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-				<td>HTML</td>
-				<td>Intermediate</td>
-				<td>1</td>
-				</tr>
-				<tr>
-				<td>CSS</td>
-				<td>Intermediate</td>
-				<td>1</td>
-				</tr>
-				<tr>
-				<td>JavaScript</td>
-				<td>Beginner</td>
-				<td>1</td>
-				</tr>
-			</tbody>
-		</table>
-  </div>
-  <div class="back-end-skill about-container__item">
-		<h3>Back-end</h3>
-		<table>
-			<thead>
-				<tr>
-				<th>Skills</th>
-				<th>Level</th>
-				<th>Years of Experience</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-				<td>Node.js</td>
-				<td>Beginner</td>
-				<td>1</td>
-				</tr>
-				<tr>
-				<td>Express</td>
-				<td>Beginner</td>
-				<td>1</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+		<div class="tech-icon">
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/html5.svg" alt="HTML5 icon">
+				<span class="tooltip-text">HTML5</span>
+			</div>
 
-  <div class="tech-icon">
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/css3.svg" alt="CSS3 icon">
+				<span class="tooltip-text">CSS3</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/html5.svg" alt="HTML5 icon">
-      <span class="tooltip-text">HTML5</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/javascript.svg" alt="JavaScript icon">
+				<span class="tooltip-text">JavaScript</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/css3.svg" alt="CSS icon">
-      <span class="tooltip-text">CSS</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/es6.svg" alt="ES6 icon">
+				<span class="tooltip-text">ES6</span>
+			</div>
 
-	<div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/javascript.svg" alt="JavaScript icon">
-		<span class="tooltip-text">JavaScript</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/react.svg" alt="React icon">
+				<span class="tooltip-text">React</span>
+			</div>
 
-    <div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/es6.svg" alt="ES6 icon">
-		<span class="tooltip-text">ES6</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
+				<span class="tooltip-text">React Native &amp; Firebase</span>
+			</div>
 
-	<div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/react.svg" alt="React icon">
-		<span class="tooltip-text">React</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/angular.svg" alt="Angular icon">
+				<span class="tooltip-text">Angular</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/redux.svg" alt="Redux icon">
-      <span class="tooltip-text">Redux</span>
-	</div>
-	
-	<!-- <div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/nativescript.svg" alt="nativescript icon">
-		<span class="tooltip-text">Nativescript</span>
-	</div> -->
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/vue.svg" alt="Vue icon">
+				<span class="tooltip-text">Vue</span>
+			</div>
 
-	<div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/reactNativeFirebase.svg" alt="React Native Firebase icon">
-		<span class="tooltip-text">React Native & Firebase</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/sass.svg" alt="SASS icon">
+				<span class="tooltip-text">SASS</span>
+			</div>
 
-	<div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/angular.svg" alt="Angular icon">
-		<span class="tooltip-text">Angular</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/bootstrap4.svg" alt="Bootstrap icon">
+				<span class="tooltip-text">Bootstrap 4</span>
+			</div>
 
-	<div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/vue.svg" alt="Vue icon">
-		<span class="tooltip-text">Vue</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/jquery.svg" alt="jQuery icon">
+				<span class="tooltip-text">jQuery</span>
+			</div>
 
-	<div class="tech-icon__item">
-		<img class="tech-icon__img img" src="img/sass.svg" alt="SASS icon">
-		<span class="tooltip-text">SASS</span>
-	</div>
-	
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/bootstrap4.svg" alt="Bootstrap icon">
-      <span class="tooltip-text">Bootstrap 4</span>
-	</div>
-	
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/jquery.svg" alt="jQuery icon">
-      <span class="tooltip-text">jQuery</span>
-	</div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/typescript.svg" alt="TypeScript icon">
+				<span class="tooltip-text">TypeScript</span>
+			</div>
 
-    <!-- <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/typescript.svg" alt="TypeScript icon">
-      <span class="tooltip-text">TypeScript</span>
-    </div> -->
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/nodejs.svg" alt="Node.js icon">
+				<span class="tooltip-text">Node.js</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/nodejs.svg" alt="Node.js icon">
-      <span class="tooltip-text">Node.js</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/mongo-db.svg" alt="Mongo DB icon">
+				<span class="tooltip-text">Mongo-DB</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/mongo-db.svg" alt="Mongo DB icon">
-      <span class="tooltip-text">Mongo-DB</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/postgre-sql.svg" alt="Postgre icon">
+				<span class="tooltip-text">PostgreSQL</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/mysql.svg" alt="MySQL icon">
-      <span class="tooltip-text">mySQL</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/heroku.svg" alt="Heroku icon">
+				<span class="tooltip-text">Heroku</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/postgre-sql.svg" alt="Postgre icon">
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/jest.svg" alt="Jest icon">
+				<span class="tooltip-text">Jest</span>
+			</div>
 
-      <span class="tooltip-text">Postgre</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/puppeteer.svg" alt="Puppeteer icon">
+				<span class="tooltip-text">Puppeteer</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/heroku.svg" alt="Heroku icon">
-      <span class="tooltip-text">Heroku</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/cucumber.svg" alt="Cucumber icon">
+				<span class="tooltip-text">Cucumber</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/jest.svg" alt="Jest icon">
-      <span class="tooltip-text">Jest</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/git.svg" alt="Git icon">
+				<span class="tooltip-text">Git</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/puppeteer.svg" alt="Puppeteer icon">
-      <span class="tooltip-text">Puppeteer</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/postman.svg" alt="Postman icon">
+				<span class="tooltip-text">Postman</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/cucumber.svg" alt="Cucumber icon">
-      <span class="tooltip-text">Cucumber</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/adobe-xd.svg" alt="Adobe XD icon">
+				<span class="tooltip-text"> Adobe XD</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/git.svg" alt="Git icon">
-      <span class="tooltip-text">Git</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/slack.svg" alt="Slack icon">
+				<span class="tooltip-text">Slack</span>
+			</div>
 
-    <!-- <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/github.svg" alt="Github icon">
-      <span class="tooltip-text">Github</span>
-    </div> -->
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/trello.svg" alt="Trello icon">
+				<span class="tooltip-text">Trello</span>
+			</div>
 
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/postman.svg" alt="Postman icon">
-      <span class="tooltip-text">Postman</span>
-    </div>
+			<div class="tech-icon__item">
+				<img class="tech-icon__img img" src="img/vsc.svg" alt="Visual Studio Code icon">
+				<span class="tooltip-text">VS Code</span>
+			</div>
+		</div> <!--tech-icon-->
 
-
-    <!-- <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/sketch.svg" alt="Sketch icon">
-      <span class="tooltip-text">Sketch</span>
-    </div> -->
-
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/adobe-xd.svg" alt="Adobe XD icon">
-      <span class="tooltip-text"> Adobe XD</span>
-    </div>
-
-    <!-- <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/slack.svg" alt="Slack icon">
-      <span class="tooltip-text">Slack</span>
-    </div> -->
-
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/trello.svg" alt="Trello icon">
-      <span class="tooltip-text">Trello</span>
-    </div>
-
-    <div class="tech-icon__item">
-      <img class="tech-icon__img img" src="img/vsc.svg" alt="Visual Studio Code icon">
-      <span class="tooltip-text">VS Code</span>
-    </div>
-
-  </div> <!--tech-icon-->
-
-	<a href="AlaEddin-Abugrara-CV.html" class="button about-container__item " target="_blank">View my CV</a>
-	<a href="file/AlaEddin-Abugrara-CV.pdf" class="button about-container__item " download>download Black and White</a><br>
+		<a href="AlaEddin-Abugrara-CV.html" class="button">View my CV</a>
+		<a href="file/AlaEddin-Abugrara-CV.pdf" class="button" download>Download B&W CV</a><br>
   </div> <!-- about-container-->
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20962 10601" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd">
@@ -377,7 +297,7 @@
 	</g>
 	<path class="fil11" d="M0 0h20962v10601H0z"/>
 	</svg>
-	<p class="legend SVGlegend">SVG animation courtesy of <a href="https://www.linkedin.com/in/fabiogarciaarranz/">Fabio Arranz</a></p>
+	<p class="SVGlegend">SVG animation courtesy of <a href="https://www.linkedin.com/in/fabiogarciaarranz/" target="_blank">Fabio Arranz</a></p>
   <footer>
 	  <p>Find me on</p>
 	  <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
