--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,10 @@
 	<meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
+
+	<!-- <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
@@ -43,7 +46,7 @@
 	</header>
 	<div class="contact-container">
 		<section class="contact-item">
-			<h1 class="contact-container__header">My contacts!</h1>
+			<h1 class="contact-container__header">MY CONTACTS</h1>
 			Ala Eddin Abugrara <br>
 			Schleißheimer Straße <br>
 			80797 Munich <br>
@@ -51,11 +54,11 @@
 			<br>
 			Tel <a href="tel:+491234567">+49 176 36369374‬</a> <br>
 			Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a> <br>
-			Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br><br>
-			<a href="mailto:alaeddin.abugrara@gmail.com" class="button">Contact me</a>
+			Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br>
+			<!-- <a href="mailto:alaeddin.abugrara@gmail.com" class="button">Contact me</a> -->
 		</section>
 		<form action="#" method="POST" id="contact-form" class="contact-item">
-			<p>Or write me a message:</p>
+			<h2>Get in touch:</h2>
 		   <div>
 				<label class="standard-label" for="contact-email">Email:<span class="legend">(required)</span></label> <br>
 				<input id="contact-email" type="email" required>
