typo in index and added new project campGround

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<meta name="description" content="Ala Eddin Abugrara web developer portfolio landing page">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
+
+	<!-- <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
@@ -42,13 +45,13 @@
 		</nav>
 	</header>
 	<main class="profile-container">
-		<a href="about.html"><img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait img"></a>
+		<a href="about.html"><img src="img/AlaAbugrara.jpeg" alt="Aladin Abugrara Portrait" class="profile__portrait"></a>
 		<div class="profile-description">
 			<h1>Hello World!</h1>
 			<p>
 				My name is Alà Eddin,
 				I was born in Tripoli Libya. <br>
-				I am a junior <span class="blueBackground-text"> &nbsp;&lt;web&gt;&nbsp;</span> with a background
+				I am a junior <span class="blueBackground-text"> &nbsp;&lt;web&gt;&nbsp;</span> developer with a background
 				in Political sciences and music, currently based in Munich
 			</p>
 			<a href="work.html">Check out some of my work</a>
