--- a/work.html
+++ b/work.html
@@ -7,7 +7,10 @@
 	<meta name="description" content="Ala Eddin Abugrara contacts">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-	<link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet">
+
+	<!-- <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
@@ -42,7 +45,7 @@
 		</nav>
 	</header>
 	<div class="work-container">
-		<h1 class="work-container__header">Work</h1>
+		<h1 class="work-container__header">WORK</h1>
 		<div class="project-list">
 			<div class="project-list__item">
 				<img src="img/website-portfolio-posterTESTING-BROKEN-SRC-IMAGES.png" class="project-list__img img" alt="picture illustrates the website-portfolio project">
@@ -116,12 +119,23 @@
 				<img src="img/Pokemon-simple-js-app-poster.png" class="project-list__img img" alt="picture illustrates the Pokemon simple-js app project">
 				<h2>Simple JS Pokedex-app</h2>
 				<p>
-					In this app with help of APIs I used vanilla Javascript to fetch and display details about pokemons, I also made a clone where all the Javascript logic was replaced by jQuery and Bootstrap 4! <br>
+					In this app with help of APIs I used vanilla Javascript to fetch and display details about Pokémons, I also made a clone where all the Javascript logic was replaced by jQuery and Bootstrap 4! <br>
 					have a look
 				</p>
 				<a class="button" href="https://funkateer.github.io/Pokedex-simple-js-app/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-simple-js-app" target="_blank">JS Code</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-jQuery-app" target="_blank">jQuery Code</a>
+			</div>
+
+			<div class="project-list__item">
+				<img src="img/campGround.png" class="project-list__img img" alt="picture illustrates the Yelp like project called campGround">
+				<h2>campGround</h2>
+				<p>
+					campGround is a YELP like app, users are able to log in add and rate camping grounds they visited or want to advertise to other camping enthusiasts! <br>
+					Users are also able to add edit or delete their own comments in a CRUD fashion
+				</p>
+				<!-- <a class="button" href="#" target="_blank">Project</a> COMING SOON  -->
+				<a class="button" href="https://github.com/Funkateer/campGround" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
@@ -160,7 +174,7 @@
 				<h2>Your project</h2>
 				<p>
 					I'm eager to be part of a developers team which I believe is the best way to elevate my skills and becoming a better developer,
-					have a look at my <a href="#" target="_blank">CV</a>
+					have a look at my <a href="AlaEddin-Abugrara-CV.html" target="_blank">CV</a>
 					for a listed and more detailed formation about my skills and experiences
 				</p>
 				<a href="contact.html" class="button">Lets get in touch</a>
