add poster to new campGround app plus minor typos

--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <!-- <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:900|Nunito:300&display=swap" rel="stylesheet">
-
   <!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
 <!-- DEV CSS -->
@@ -19,7 +16,7 @@
     <a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
     <a href="index.html" class="namelogo">
       <span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-      <span class="namelogo-caption">Web-developer </span>
+      <span class="namelogo-caption">Web Developer </span>
     </a>
     <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
