--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,7 @@
 	<meta name="description" content="Ala Eddin Abugrara contacts such as address E-mail and phone number">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-
-	<!-- <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
-
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
@@ -24,7 +21,7 @@
 		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
 		<a href="index.html" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-			<span class="namelogo-caption">Web-developer </span>
+			<span class="namelogo-caption">Web Developer </span>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
