--- a/work.html
+++ b/work.html
@@ -7,24 +7,21 @@
 	<meta name="description" content="Ala Eddin Abugrara contacts">
 	<meta name="author" content="Ala Eddin Abugrara">
 	<link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
-
-	<!-- <link href="https://fonts.googleapis.com/css?family=Caudex%7CMerriweather:700" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:700|Nunito:300&display=swap" rel="stylesheet">
-
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="dist/css/styles.production.min.css"> -->
 
 	<!-- DEV CSS -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
-	<title>My work</title>
+	<title>My Work</title>
 </head>
 <body>
 	<header class="page-header">
 		<a href="index.html"> <img src="img/logo.png" alt="personal logo" class="page-header__item navigation__logo img"></a>
 		<a href="index.html" class="namelogo">
 			<span class="namelogo-name">ALA EDDIN ABUGRARA</span><br>
-			<span class="namelogo-caption">Web-developer </span>
+			<span class="namelogo-caption">Web Developer </span>
 		</a>
 		<nav class="main-navigation page-header__item">
 		   <ul role="menubar" class="navigation-list">
@@ -48,17 +45,14 @@
 		<h1 class="work-container__header">WORK</h1>
 		<div class="project-list">
 			<div class="project-list__item">
-				<img src="img/website-portfolio-posterTESTING-BROKEN-SRC-IMAGES.png" class="project-list__img img" alt="picture illustrates the website-portfolio project">
+				<img src="img/website-portfolio-poster.png" class="project-list__img img" alt="picture illustrates the website-portfolio project">
 				<h2>My Portfolio</h2>
 				<p>
 					Yes, the very one you're looking at! <br>
 					I wrote from scratch this web site, implementing various skills I gained like CSS processors, SEO optimization, HTML semantics and
 					mobile responsiveness have a look at the code for more details
 				</p>
-				<!-- <a class="button" href="https://github.com/Funkateer/website-portfolio" target="_blank">Code</a> -->
-
-				<!-- TEMPORARY disabled Button for UI testing  -->
-				<a class="button" href="#">Code</a>
+				<a class="button" href="https://github.com/Funkateer/website-portfolio" target="_blank">Code</a>
 			</div>
 
 			<div class="project-list__item">
@@ -128,7 +122,7 @@
 			</div>
 
 			<div class="project-list__item">
-				<img src="img/campGround.png" class="project-list__img img" alt="picture illustrates the Yelp like project called campGround">
+				<img src="img/campGround-poster.png" class="project-list__img img" alt="picture illustrates the Yelp like project called campGround">
 				<h2>campGround</h2>
 				<p>
 					campGround is a YELP like app, users are able to log in add and rate camping grounds they visited or want to advertise to other camping enthusiasts! <br>
@@ -179,6 +173,7 @@
 				</p>
 				<a href="contact.html" class="button">Lets get in touch</a>
 			</div>
+
 		</div> <!--project list-->
 	</div> <!--work container-->
 	<footer>
