--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 			  <li><a href="about.html" role="menuitem" class="navigation-list__item">About</a></li>
 			  <li><a href="work.html" role="menuitem" class="navigation-list__item">My Work</a></li>
 			  <li><a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contacts</a></li>
-		   </ul>
+			 </ul>
 		   <div class="dropdown-menu">
 				<button class="dropbtn button">&#9776;</button>
 				<div class="dropdown-menu-list">
@@ -52,12 +52,11 @@
 			Tel <a href="tel:+491234567">+49 176 36369374‬</a> <br>
 			Skype <a href="skype:alaabugrara?userinfo"> alaabugrara</a> <br>
 			Mail <a href="mailto:alaeddin.abugrara@gmail.com">alaeddin.abugrara(at)gmail.com</a> <br>
-			<!-- <a href="mailto:alaeddin.abugrara@gmail.com" class="button">Contact me</a> -->
 		</section>
 		<form action="#" method="POST" id="contact-form" class="contact-item">
 			<h2>Get in touch:</h2>
 		   <div>
-				<label class="standard-label" for="contact-email">Email:<span class="legend">(required)</span></label> <br>
+				<label class="standard-label" for="contact-email">Email: <span class="legend">(required)</span></label> <br>
 				<input id="contact-email" type="email" required>
 		   </div>
 			<br>
@@ -66,6 +65,7 @@
 				<input id="contact-tel" type="tel">
 			</div>
 			<br>
+			<div class="messageSent">Your message has been sent</div>
 		   <div>
 				<label class="standard-label last" for="contact-mes" >Message: <span class="legend">(required)</span> </label><br>
 				<textarea id="contact-mes" required maxlength="240" placeholder="240 characters left &#10;messaging is under construction &#x1F3D7;"></textarea>
@@ -80,6 +80,7 @@
 		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" class="img" alt="Twitter Logo"></a>
 		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" class="img" alt="LinkedIn Logo"></a>
 	</footer>
-	<script src="dist/js/scripts.min.js"></script>
+	<!-- <script src="dist/js/scripts.min.js"></script> -->
+	<script src="js/scripts.js"></script>
 </body>
 </html>
