Hide CV viewer when visiting with mobile, change campGround project order, dropdown menu button bigger and position on bottom of navbar

--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@
 			</div>
 		</div> <!--tech-icon-->
 
-		<a href="AlaEddin-Abugrara-CV.html" class="button">View my CV</a>
+		<a href="AlaEddin-Abugrara-CV.html" class="button hideForMobile">View my CV</a>
 		<a href="file/AlaEddin-Abugrara-CV.pdf" class="button" download>Download B&W CV</a><br>
   </div> <!-- about-container-->
 
