--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -44,7 +44,7 @@
     </p>
   </div>
 
-  <embed class="cvView" src="file/AlaEddin-Abugrara-CV-coloured.pdf"/>
+  <embed class="cvView hideForMobile" src="file/AlaEddin-Abugrara-CV-coloured.pdf"/>
 
   <footer>
     <p>Find me on</p>
