--- a/about.html
+++ b/about.html
@@ -295,11 +295,11 @@
 	<path class="fil11" d="M0 0h20962v10601H0z"/>
 	</svg>
 	<p class="SVGlegend">SVG animation courtesy of <a href="https://www.linkedin.com/in/fabiogarciaarranz/" target="_blank">Fabio Arranz</a></p>
-  <footer>
-	  <p>Find me on</p>
-	  <a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" alt="Github Logo"></a>
-	  <a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" alt="Twitter Logo"></a>
-	  <a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" alt="LinkedIn Logo"></a>
-  </footer>
+	<footer>
+		<p>Find me on</p>
+		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
+		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
+	</footer>
 </body>
 </html>
