--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,9 @@
 	</div>
 	<footer>
 		<p>Find me on</p>
-		<a href="https://github.com/Funkateer" target="_blank"><img src="img/githubIcon.svg" class="img" alt="Github Logo"></a>
-		<a href="https://twitter.com/Funk4teer" target="_blank"><img src="img/twitterIcon.svg" class="img" alt="Twitter Logo"></a>
-		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img src="img/linkedinIcon.svg" class="img" alt="LinkedIn Logo"></a>
+		<a href="https://github.com/Funkateer" target="_blank"><img class="social-img" src="img/githubIcon.svg" alt="Github"></a>
+		<a href="https://twitter.com/Funk4teer" target="_blank"><img class="social-img" src="img/twitterIcon.svg" alt="Twitter"></a>
+		<a href="https://www.linkedin.com/in/al%C3%A0-eddin-abugrara-214ba5115/" target="_blank"><img class="social-img" src="img/linkedinIcon.svg" alt="LinkedIn"></a>
 	</footer>
 	<!-- <script src="dist/js/scripts.min.js"></script> -->
 	<script src="js/scripts.js"></script>
