hide projects that cant be used or visited while on mobile

--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -44,7 +44,7 @@
     </p>
   </div>
 
-  <embed class="cvView hideForMobile" src="file/AlaEddin-Abugrara-CV-coloured.pdf"/>
+  <embed class="cvView hideFromMobile" src="file/AlaEddin-Abugrara-CV-coloured.pdf"/>
 
 	<footer>
 		<p>Find me on</p>
