replace hideFromMobile class to the right screen size

--- a/work.html
+++ b/work.html
@@ -127,7 +127,7 @@
 					In this app with help of APIs I used vanilla Javascript to fetch and display details about Pokémons, I also made a clone where all the Javascript logic was replaced by jQuery and Bootstrap 4! <br>
 					have a look
 				</p>
-				<a class="button" href="https://funkateer.github.io/Pokedex-simple-js-app/" target="_blank">Project</a>
+				<a class="button" href="https://funkateer.github.io/Pokedex-jQuery-app/" target="_blank">Project</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-simple-js-app" target="_blank">JS Code</a>
 				<a class="button" href="https://github.com/Funkateer/Pokedex-jQuery-app" target="_blank">jQuery Code</a>
 			</div>
