add break after p tag in cv view to space out elements, made social icon in footer bigger when visiting on mobile and tech icons container wider

--- a/AlaEddin-Abugrara-CV.html
+++ b/AlaEddin-Abugrara-CV.html
@@ -39,7 +39,7 @@
 
   <div class="cvAction">
     <p>
-      Download the printable Black and White version <br>
+      Download the printable Black and White version <br> <br>
       <a href="file/AlaEddin-Abugrara-CV.pdf" class="button cvDownload" download >download CV</a>
     </p>
   </div>
